--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,9 @@ build:
   script:
     - docker build -t urielrosen/weather-app:latest .
     - docker push urielrosen/weather-app:latest
+    #- docker build -t $DOCKER_IMAGE .
+    #- docker push $DOCKER_IMAGE
+
 
 test:
   stage: test
