--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,8 @@ stages:
   - deploy
 
 variables:
-#  DOCKER_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-  DOCKER_IMAGE: urielrosen/weather-app:latest
+  DOCKER_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+  
 
 image: docker:dind
 
@@ -13,17 +13,15 @@ services:
     - docker:dind
 
 before_script:
-#  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY_URL
-  - docker login -u urielrosen -p dckr_pat_HK5bgDutSCwqH0fCSBkGXsfH8lA https://index.docker.io/v1
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY_URL
+
 build:
   stage: build
   services:
     - docker:dind
   script:
-    - docker build -t urielrosen/weather-app:latest .
-    - docker push urielrosen/weather-app:latest
-    #- docker build -t $DOCKER_IMAGE .
-    #- docker push $DOCKER_IMAGE
+    - docker build -t $DOCKER_IMAGE .
+    - docker push $DOCKER_IMAGE
 
 
 test:
