--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ build:
   services:
     - docker:dind
   script:
-    - sudo docker build -t $DOCKER_IMAGE .
-    - sudo docker push $DOCKER_IMAGE
+    - docker build -t $DOCKER_IMAGE .
+    - docker push $DOCKER_IMAGE
 
 
 test:
