--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:
     - docker:dind
   script:
     - docker build -t $DOCKER_IMAGE .
-    - docker push $DOCKER_IMAGE
+   # - docker push $DOCKER_IMAGE
 
 
 test:
