--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build:
     - docker:dind
   script:
     - docker build -t $DOCKER_IMAGE .
+    - echo $DOCKER_IMAGE
    # - docker push $DOCKER_IMAGE
 
 
