--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ build:
   script:
     - docker build -t $DOCKER_IMAGE .
     - echo $DOCKER_IMAGE
+    - echo $CI_COMMIT_REF_SLUG
    # - docker push $DOCKER_IMAGE
 
 
