--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:
     - docker build -t $DOCKER_IMAGE .
     - echo $DOCKER_IMAGE
     - echo $CI_COMMIT_REF_SLUG
-   # - docker push $DOCKER_IMAGE
+    - docker push $DOCKER_IMAGE
 
 
 test:
