--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ build:
     - echo $CI_COMMIT_REF_SLUG
     - docker images
     - docker push $DOCKER_IMAGE
-    #- docker push urielrosen/weather-app:pythonwebapp
+    ##- docker push urielrosen/weather-app:pythonwebapp
 
 
 test:
