--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ services:
     - docker:dind
 
 before_script:
-  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY_URL
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD 
 
 build:
   stage: build
