--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
   - test
-  - deploy
+
 
 variables:
   DOCKER_IMAGE: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
@@ -31,9 +31,8 @@ build:
 test:
   stage: test
   script:
-    - docker run app.py pytest
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD 
+    - docker pull $DOCKER_IMAGE
+    - docker run --rm $DOCKER_IMAGE pytest tests/
 
-deploy:
-  stage: deploy
-  script:
-    - echo "Deployment done"#
+
